<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_helper" android:title="@string/helper"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/evalute_software" android:title="@string/evalute_software"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_renew"
        android:icon="@drawable/ic_autorenew"
        android:title="@string/action_share"
        android:showAsAction="ifRoom" />

</menu>
