<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:weightSum="5"
    android:orientation="vertical"
    android:background="@drawable/sky_clear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/background_main"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/relay_weather_info"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_info"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDay"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@android:color/white"/>
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/ivWeather"
            android:layout_width="80px"
            android:layout_height="80px"
            android:src="@drawable/ajax_loading"
           />
        <TextView
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvInfoLocation"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@android:color/white"/>
        <TextView
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvInfoWeatherToday"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@android:color/white"/>
        <LinearLayout
            android:id="@+id/llTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="0.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nhiệt độ"
                android:gravity="left"
                android:textSize="@dimen/text_large"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_weight="0.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvTemperatureToday"
                android:text="20"
                android:gravity="right"
                android:textSize="@dimen/text_large"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_weight="0.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtdoC"
                android:text="°C"
                android:gravity="left"
                android:lines="1"
                android:textSize="@dimen/text_large"
                android:textColor="@android:color/white"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sucgio"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_normal"
                    />
                <TextView
                    android:gravity="left"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvSpeedWind"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_normal"
                    android:layout_alignParentRight="true"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doam"
                    android:gravity="left"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_normal"
                    />
                <TextView
                    android:gravity="left"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvHumidity"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_normal"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apsuat"
                    android:gravity="left"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_normal"
                    />
                <TextView
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:id="@+id/tvPressure"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_normal"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:lines="1"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nhiệt độ min"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_normal"
                    />

                <TextView
                    android:lines="1"
                    android:gravity="right"
                    android:layout_weight="0.3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTemperatureMin"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_normal"
                    />
                <TextView
                    android:layout_weight="0.3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="°C"
                    android:gravity="left"
                    android:textSize="@dimen/text_large"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nhietdomax"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_normal"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTemperatureMax"
                    android:gravity="right"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_normal"
                    android:layout_weight="0.3"
                    />
                <TextView
                    android:layout_weight="0.3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="°C"
                    android:gravity="left"
                    android:textSize="@dimen/text_large"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/background_info"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTempDay1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:layout_gravity="center"
                />
            <ImageButton
                android:id="@+id/ib1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ajax_loading"
                android:background="@android:color/transparent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDay1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_normal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTempDay2"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:layout_gravity="center"
                />
            <ImageButton
                android:id="@+id/ib2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ajax_loading"
                android:background="@android:color/transparent"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDay2"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_normal"
                />
        </LinearLayout>
        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTempDay3"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:layout_gravity="center"
                />
            <ImageButton
                android:id="@+id/ib3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ajax_loading"
                android:background="@android:color/transparent"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDay3"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_normal"
                android:layout_alignParentRight="true"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTempDay4"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:layout_gravity="center"
                />
            <ImageButton
                android:id="@+id/ib4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ajax_loading"
                android:background="@android:color/transparent"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDay4"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_normal"
                android:layout_alignParentRight="true"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTempDay5"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:layout_gravity="center"
                />
            <ImageButton
                android:id="@+id/ib5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ajax_loading"
                android:background="@android:color/transparent"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDay5"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_normal"
                android:layout_alignParentRight="true"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>